Adapt API with more fields
