# src/casing/ICasingDetailRequest.ts
@@ -1,0 +1,6 @@
+export interface ICasingDetailRequest {
+    crnnumber: string;
+    salesOrg: string;
+    distChannel: string;
+    soldto: string;
+}
